[gd_scene load_steps=25 format=3 uid="uid://cjjmp5rsi3iri"]

[ext_resource type="Script" path="res://Time Controller/time_controller.gd" id="1_rb4nf"]
[ext_resource type="Script" path="res://Time Controller/State Machine/time_state_machine.gd" id="2_w1aey"]
[ext_resource type="Script" path="res://Time Controller/State Machine/States/wake_state.gd" id="3_vhys8"]
[ext_resource type="Script" path="res://Time Controller/State Machine/States/open_state.gd" id="4_wnbm1"]
[ext_resource type="Script" path="res://Time Controller/State Machine/States/close_state.gd" id="5_t2hd6"]
[ext_resource type="Script" path="res://Time Controller/State Machine/States/sleep_state.gd" id="6_sng7x"]
[ext_resource type="Script" path="res://debug_shop.gd" id="7_atcgp"]
[ext_resource type="PackedScene" uid="uid://cegenwv3rteaw" path="res://Time Controller/Sky/sky.tscn" id="8_02blq"]
[ext_resource type="Shader" path="res://Time Controller/Sky/sky_shader.gdshader" id="9_20ixw"]
[ext_resource type="Script" path="res://Time Controller/time_globals.gd" id="9_d2mfm"]

[sub_resource type="LabelSettings" id="LabelSettings_sa3hf"]
font_size = 200

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_h2jm5"]
load_path = "res://.godot/imported/Sun.png-9d0f3a06cab606e5c72e8c9f19c952e6.s3tc.ctex"

[sub_resource type="Curve" id="Curve_xg4mi"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.122449, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.732143), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_oflv2"]
curve = SubResource("Curve_xg4mi")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_xrqtw"]
noise_type = 3
frequency = 0.02
fractal_octaves = 3

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_u8q1x"]
seamless = true
noise = SubResource("FastNoiseLite_xrqtw")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_3x0et"]
noise_type = 3
frequency = 0.02
fractal_octaves = 3

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_qjtu4"]
seamless = true
noise = SubResource("FastNoiseLite_3x0et")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_hyk2g"]
noise_type = 3
frequency = 0.02
fractal_octaves = 3

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_kbcpb"]
seamless = true
noise = SubResource("FastNoiseLite_hyk2g")

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_5mn3l"]
load_path = "res://.godot/imported/shooting_star_sampler.png-ff1e808fa5f8310e548f777b9285bd3e.s3tc.ctex"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_js2eq"]
shader = ExtResource("9_20ixw")
shader_parameter/clouds_samples = 32
shader_parameter/shadow_sample = 4
shader_parameter/clouds_density = 0.4
shader_parameter/clouds_scale = 1.0
shader_parameter/clouds_smoothness = 0.05
shader_parameter/clouds_light_color = Color(0.227451, 0.447059, 1, 1)
shader_parameter/clouds_shadow_intensity = 8.0
shader_parameter/cloud_shape_sampler = SubResource("NoiseTexture2D_qjtu4")
shader_parameter/cloud_noise_sampler = SubResource("NoiseTexture2D_u8q1x")
shader_parameter/cloud_curves = SubResource("CurveTexture_oflv2")
shader_parameter/high_clouds_density = 0.0
shader_parameter/high_clouds_sampler = SubResource("NoiseTexture2D_kbcpb")
shader_parameter/top_color = Color(0.027451, 0.101961, 0.25098, 1)
shader_parameter/bottom_color = Color(0.152941, 0.0666667, 0.270588, 1)
shader_parameter/sun_scatter = Color(0.12549, 0.0862745, 0.372549, 1)
shader_parameter/astro_tint = Color(0.905882, 0.788235, 0.627451, 1)
shader_parameter/astro_scale = 2.5
shader_parameter/astro_intensity = 3.0
shader_parameter/astro_sampler = SubResource("CompressedTexture2D_h2jm5")
shader_parameter/stars_intensity = 5.0
shader_parameter/shooting_stars_intensity = 0.1
shader_parameter/shooting_star_tint = Color(1, 0.662745, 0.419608, 1)
shader_parameter/shooting_star_sampler = SubResource("CompressedTexture2D_5mn3l")

[sub_resource type="Sky" id="Sky_c0l4d"]
sky_material = SubResource("ShaderMaterial_js2eq")

[sub_resource type="Environment" id="Environment_o4sqg"]
background_mode = 2
sky = SubResource("Sky_c0l4d")
ambient_light_color = Color(1, 1, 1, 1)
adjustment_enabled = true
adjustment_saturation = 1.5

[node name="TimeController" type="Node3D"]
script = ExtResource("1_rb4nf")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("starting_state")]
script = ExtResource("2_w1aey")
starting_state = NodePath("wake")

[node name="wake" type="Node" parent="StateMachine" node_paths=PackedStringArray("wake_state", "open_state", "close_state", "sleep_state")]
script = ExtResource("3_vhys8")
wake_state = NodePath(".")
open_state = NodePath("../open")
close_state = NodePath("../close")
sleep_state = NodePath("../sleep")

[node name="open" type="Node" parent="StateMachine" node_paths=PackedStringArray("wake_state", "open_state", "close_state", "sleep_state")]
script = ExtResource("4_wnbm1")
time = 1
wake_state = NodePath("../wake")
open_state = NodePath(".")
close_state = NodePath("../close")
sleep_state = NodePath("../sleep")

[node name="close" type="Node" parent="StateMachine" node_paths=PackedStringArray("wake_state", "open_state", "close_state", "sleep_state")]
script = ExtResource("5_t2hd6")
time = 2
wake_state = NodePath("../wake")
open_state = NodePath("../open")
close_state = NodePath(".")
sleep_state = NodePath("../sleep")

[node name="sleep" type="Node" parent="StateMachine" node_paths=PackedStringArray("wake_state", "open_state", "close_state", "sleep_state")]
script = ExtResource("6_sng7x")
time = 3
wake_state = NodePath("../wake")
open_state = NodePath("../open")
close_state = NodePath("../close")
sleep_state = NodePath(".")

[node name="Shop" type="Label" parent="."]
visible = false
offset_right = 1153.0
offset_bottom = 648.0
text = "Closed"
label_settings = SubResource("LabelSettings_sa3hf")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("7_atcgp")

[node name="Sky" parent="." instance=ExtResource("8_02blq")]
unique_name_in_owner = true

[node name="WorldEnvironment" parent="Sky" index="0"]
environment = SubResource("Environment_o4sqg")

[node name="DirectionalLight3D" parent="Sky" index="1"]
transform = Transform3D(1, 0, 0, 0, 0.984808, -0.173648, 0, 0.173648, 0.984808, 0, 0, 0)

[node name="Node" type="Node" parent="."]
script = ExtResource("9_d2mfm")

[connection signal="time_close" from="." to="Shop" method="_on_time_controller_time_close"]
[connection signal="time_open" from="." to="Shop" method="_on_time_controller_time_open"]
[connection signal="state_changed" from="StateMachine" to="Shop" method="_on_state_machine_state_changed"]

[editable path="Sky"]
